--- a/reglas.css
+++ b/reglas.css
@@ -1,33 +1,51 @@
-.si {
-    color: green
-}
-
-#no {
-    background-color: blueviolet;
-}
-
-.q {
-    color: red;
-}
-
-.t {
-    color: orange;
-}
-
-#e {
-    color: brown;
-}
-
-#a {
-    color: white;
-    background-color: black;
-}
-
-.b {
-    color: navy;
-}
-
-.t {
-    color:red;
-    background-color: blueviolet;
-}
+.chat {
+    width: 400px;
+    margin: 0 auto;
+  }
+  
+  .mensaje {
+    display: flex;
+    margin-bottom: 10px;
+  }
+  
+  .enviado .avatar,
+  .recibido .avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  
+  .avatar img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .contenido {
+    margin-left: 10px;
+    background-color: #F0F0F0;
+    border-radius: 5px;
+    padding: 10px;
+  }
+  
+  .info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .nombre {
+    font-weight: bold;
+    font-size: 14px;
+  }
+  
+  .fecha {
+    font-size: 12px;
+    color: #888888;
+  }
+  
+  .texto p {
+    font-size: 16px;
+    color: #333333;
+  }
+  
