--- a/reglas.css
+++ b/reglas.css
@@ -1,51 +1,27 @@
-.chat {
-    width: 400px;
-    margin: 0 auto;
-  }
-  
-  .mensaje {
-    display: flex;
-    margin-bottom: 10px;
-  }
-  
-  .enviado .avatar,
-  .recibido .avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    overflow: hidden;
-  }
-  
-  .avatar img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .contenido {
-    margin-left: 10px;
-    background-color: #F0F0F0;
-    border-radius: 5px;
-    padding: 10px;
-  }
-  
-  .info {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .nombre {
-    font-weight: bold;
-    font-size: 14px;
-  }
-  
-  .fecha {
-    font-size: 12px;
-    color: #888888;
-  }
-  
-  .texto p {
-    font-size: 16px;
-    color: #333333;
-  }
-  
+header {
+  background-color: #333;
+  padding: 10px;
+}
+
+.menu {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+.menu li {
+  margin-right: 10px;
+}
+
+.menu li:last-child {
+  margin-right: 0;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
