--- a/Porfoli/Formulario.css
+++ b/Porfoli/Formulario.css
@@ -1,22 +1,53 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background-color: #E2F7FF;
   }
   
-  .container {
+  header {
+    width: 98%%;
+    height: 60px;
+    background: #DAEDFF;
+    padding: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Navegación {
+    font-size: 2em;
+    list-style: none;
+    display: flex;
+}
+
+.Navegación li {
+    margin: 10px;
+    text-decoration: none;
+    padding: 1em;
+}
+
+.Navegación li:last-child {
+    margin-right: 0;
+}
+
+.Navegación li a {
+    text-decoration: none;
+    color:rgb(0, 0, 0);
+}
+
+.container {
     max-width: 500px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 50px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  }
-  
-  h1 {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  
+}
+h1 {
+    font-size: 40px;
+    margin-top: 3px;
+    margin-bottom: 50px;
+}
+
   form {
     margin-top: 20px;
   }
@@ -26,15 +57,16 @@ body {
   }
   
   label {
+    font-size: 25px;
     display: block;
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
   }
   
   input[type="text"],
   input[type="email"],
   textarea {
-    width: 100%;
+    width: 20%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
