--- a/Porfoli/Formulario.css
+++ b/Porfoli/Formulario.css
@@ -1,11 +1,11 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #E2F7FF;
-  }
-  
-  header {
-    width: 98%%;
-    height: 60px;
+}
+
+header {
+    width: 98.2%;
+    height: 79px;
     background: #DAEDFF;
     padding: 1em;
     display: flex;
@@ -48,35 +48,35 @@ h1 {
     margin-bottom: 50px;
 }
 
-  form {
+form {
     margin-top: 20px;
-  }
-  
-  .form-group {
+}
+
+.form-group {
     margin-bottom: 20px;
-  }
-  
-  label {
+}
+
+label {
     font-size: 25px;
     display: block;
     font-weight: bold;
     margin-bottom: 15px;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  textarea {
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
     width: 20%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
-  }
-  
-  input[type="checkbox"] {
+}
+
+input[type="checkbox"] {
     margin-top: 5px;
-  }
-  
-  input[type="submit"] {
+}
+
+input[type="submit"] {
     background-color: #4CAF50;
     color: white;
     border: none;
@@ -88,9 +88,8 @@ h1 {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-  }
-  
-  input[type="submit"]:hover {
+}
+
+input[type="submit"]:hover {
     background-color: #45a049;
-  }
-  
+}
