--- a/Porfoli/Practicas.css
+++ b/Porfoli/Practicas.css
@@ -29,3 +29,31 @@ header {
     color:rgb(0, 0, 0);
 }
 
+  .Horizontal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .column {
+    width: 50%;
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .column a {
+    display: block;
+    margin-bottom: 15px;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  .column a:hover {
+    background-color: #45a049;
+  }
