--- a/Porfoli/Inicio.css
+++ b/Porfoli/Inicio.css
@@ -44,9 +44,14 @@ main {
 footer {
     width: 100%;
     height: 200px;
-
     background: #DAEDFF;
     clear: both;
     text-align: center;
     line-height: 60px;
+}
+
+img {
+    border-radius: 50%;
+    text-align: center;
+    margin-top: 60px;
 }
