--- a/Porfoli/Practicas.css
+++ b/Porfoli/Practicas.css
@@ -37,7 +37,7 @@ header {
 
 .column {
     width: 50%;
-    padding: 30px;
+    padding: 20px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
@@ -56,4 +56,19 @@ header {
 
 .column a:hover {
     background-color: #45a049;
+}
+
+footer {
+    width: 100%;
+    height: 200px;
+    background: #DAEDFF;
+    clear: both;
+    text-align: center;
+    line-height: 60px;
+}
+
+img {
+    border-radius: 50%;
+    text-align: center;
+    margin-top: 60px;
 }
