--- a/Porfoli/Formulario.css
+++ b/Porfoli/Formulario.css
@@ -93,3 +93,18 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #45a049;
 }
+
+footer {
+    width: 100%;
+    height: 200px;
+    background: #DAEDFF;
+    clear: both;
+    text-align: center;
+    line-height: 60px;
+}
+
+img {
+    border-radius: 50%;
+    text-align: center;
+    margin-top: 60px;
+}
