--- a/Porfoli/Inicio.css
+++ b/Porfoli/Inicio.css
@@ -53,5 +53,25 @@ footer {
 img {
     border-radius: 50%;
     text-align: center;
-    margin-top: 60px;
+    margin-top: 10px;
+}
+
+h1 {
+    font-size: 2.3em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: initial;
+}
+
+.Description {
+    font-size: 1.5em;
+}
+
+h2 {
+    font-size: 2.3em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: initial;
+}
+
+.Vocacion {
+    font-size: 1.5em;
 }
